src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Portfolio_Turnover_Per_Year__c</fullName>
        <inlineHelpText>If you have greater than 0 acquisitions/dispositions, how much of your portfolio do you turn over each year?</inlineHelpText>
        <label>Portfolio Turnover Per Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>1-3%</fullName>
                </value>
                <value>
                    <fullName>4-7%</fullName>
                </value>
                <value>
                    <fullName>8-12%</fullName>
                </value>
                <value>
                    <fullName>13-20%</fullName>
                </value>
                <value>
                    <fullName>21%+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>The name this contact chooses to go by (nickname)</description>
        <inlineHelpText>The name this contact chooses to go by (nickname)</inlineHelpText>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Include__c</fullName>
        <label>Products Include</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Research &amp; News</fullName>
                </value>
                <value>
                    <fullName>Research Only</fullName>
                </value>
                <value>
                    <fullName>News Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Designation__c</fullName>
        <label>Professional Designation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_Client__c</fullName>
        <formula>Account.React_Client__c</formula>
        <label>React Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>React_id__c</fullName>
        <externalId>true</externalId>
        <label>React id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Registrant_Date__c</fullName>
        <label>Registrant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registrant_to_New__c</fullName>
        <formula>New_User_Date__c - Registrant_Date__c</formula>
        <label>Registrant to New</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Data_in_Role_Mktg_Identified__c</fullName>
        <inlineHelpText>Which of the following describe how you use real estate research/data in your role?  Check all that apply.</inlineHelpText>
        <label>Research/Data in Role Mktg Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Investor Communications</fullName>
                </value>
                <value>
                    <fullName>Market Selection</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Identifying Assets</fullName>
                </value>
                <value>
                    <fullName>Asset Valuation</fullName>
                </value>
                <value>
                    <fullName>Stock Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesLoft1__Active_Contact__c</fullName>
        <description>If Contact has an activity logged within the last 30 days, this field will return a value of 1.</description>
        <formula>IF( TODAY () - LastActivityDate &lt;= 30, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Name__c</fullName>
        <description>Most recent SalesLoft Cadence of Contact record.</description>
        <label>Most Recent Cadence - Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Next_Step_Due_Date__c</fullName>
        <description>Next SalesLoft step due date.</description>
        <label>Most Recent Cadence - Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Last_Completed_Step__c</fullName>
        <description>Number of most recently completed SalesLoft Cadence step.</description>
        <label>Most Recent Cadence - Last Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <inlineHelpText>Note: Activities are not auto-logged to this email</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sector_Interests__c</fullName>
        <description>Gives color to what Sectors this contact is interested in.</description>
        <label>Sector Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Niche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sectors_of_Interest_Marketing_Identified__c</fullName>
        <inlineHelpText>Which property sectors are of interest to you?  Check all that apply.</inlineHelpText>
        <label>Sectors of Interest Marketing Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail (Mall, Strip Centers, Net Lease)</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes</fullName>
                </value>
                <value>
                    <fullName>Self-Storage</fullName>
                </value>
                <value>
                    <fullName>Student Housing</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Cold Storage</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Towers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscribe_to_Competitors_Mktg_Identified__c</fullName>
        <inlineHelpText>Do you subscribe to any of the following providers? Check all that apply.</inlineHelpText>
        <label>Subscribe to Competitors Mktg Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Costar</fullName>
                </value>
                <value>
                    <fullName>Axiometrics</fullName>
                </value>
                <value>
                    <fullName>Moodys/REIS</fullName>
                </value>
                <value>
                    <fullName>Real Capital Analytics</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Netsuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <description>Denoted whether the record in created netsuite or not</description>
        <label>Synced?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T30_Clicks__c</fullName>
        <description>30-day rolling clicks</description>
        <inlineHelpText>30-day rolling clicks</inlineHelpText>
        <label>T30 Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T90_Clicks__c</fullName>
        <description>90-day rolling clicks</description>
        <inlineHelpText>90-day rolling clicks</inlineHelpText>
        <label>T90 Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOS_Sign_Off__c</fullName>
        <label>TOS Sign Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TTM_Clicks__c</fullName>
        <description>12-mo rolling clicks</description>
        <inlineHelpText>12-mo rolling clicks</inlineHelpText>
        <label>TTM Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary_reactivation_exercise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to designate which contacts need to be reactivated after mass deactivation efforts.</description>
        <label>Temporary reactivation exercise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>Europe/London</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                </value>
                <value>
                    <fullName>Africa/Abidjan</fullName>
                </value>
                <value>
                    <fullName>Africa/Accra</fullName>
                </value>
                <value>
                    <fullName>Africa/Addis_Ababa</fullName>
                </value>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Asmera</fullName>
                </value>
                <value>
                    <fullName>Africa/Bamako</fullName>
                </value>
                <value>
                    <fullName>Africa/Bangui</fullName>
                </value>
                <value>
                    <fullName>Africa/Banjul</fullName>
                </value>
                <value>
                    <fullName>Africa/Bissau</fullName>
                </value>
                <value>
                    <fullName>Africa/Blantyre</fullName>
                </value>
                <value>
                    <fullName>Africa/Brazzaville</fullName>
                </value>
                <value>
                    <fullName>Africa/Bujumbura</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Ceuta</fullName>
                </value>
                <value>
                    <fullName>Africa/Conakry</fullName>
                </value>
                <value>
                    <fullName>Africa/Dakar</fullName>
                </value>
                <value>
                    <fullName>Africa/Dar_es_Salaam</fullName>
                </value>
                <value>
                    <fullName>Africa/Djibouti</fullName>
                </value>
                <value>
                    <fullName>Africa/Douala</fullName>
                </value>
                <value>
                    <fullName>Africa/El_Aaiun</fullName>
                </value>
                <value>
                    <fullName>Africa/Freetown</fullName>
                </value>
                <value>
                    <fullName>Africa/Gaborone</fullName>
                </value>
                <value>
                    <fullName>Africa/Harare</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing_to_Subscribe_to_Next_RE_Provider__c</fullName>
        <inlineHelpText>When do you anticipate subscribing to your next research provider?</inlineHelpText>
        <label>Timing to Subscribe to Next RE Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-30 Days</fullName>
                </value>
                <value>
                    <fullName>31-90 Days</fullName>
                </value>
                <value>
                    <fullName>91-180 Days</fullName>
                </value>
                <value>
                    <fullName>181+ Days</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Data_Source__c</fullName>
        <label>Title Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>ZoomInfo</fullName>
                </value>
                <value>
                    <fullName>Self-reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Deactivate_On__c</fullName>
        <label>To Deactivate On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tokens__c</fullName>
        <label>Tokens</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Tier_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Near term opportunities that should be contacted on a regular basis.</description>
        <inlineHelpText>Check this Box for this contact to be added to a list of VIP&apos;s that should be top of mind</inlineHelpText>
        <label>Top Tier Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Real_time_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this checkbox to true will initiate sync to Netsuite</description>
        <label>Trigger Real-time Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_Markets_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which markets within United Kingdom/Continental Europe are you interested in? (Check all that apply)</inlineHelpText>
        <label>UK Markets of Interest Mktg Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 25 markets</fullName>
                </value>
                <value>
                    <fullName>Next 25 markets</fullName>
                </value>
                <value>
                    <fullName>Tertiary markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Markets_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which markets within the U.S and Canada are you interested in? (Check all that apply)</inlineHelpText>
        <label>US Markets of Interest Mktg Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 50 markets</fullName>
                </value>
                <value>
                    <fullName>Next 50 markets</fullName>
                </value>
                <value>
                    <fullName>Tertiary markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Content_Contact__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_S_CPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>U.S. CPPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>U_S_Webinars_and_Featured_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>U.S. Webinars and Featured Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Cohort__c</fullName>
        <description>place holder while we build logic for the usage cohort field</description>
        <formula>IF( T90_Clicks__c &gt; 24, &quot;Power&quot;,
IF( T90_Clicks__c &gt; 2, &quot;Active&quot;,
IF( T30_Clicks__c &gt; 0, &quot;Monthly&quot;,
&quot;&quot;)))</formula>
        <label>Usage Cohort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Risk__c</fullName>
        <label>Usage Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T-12</fullName>
                </value>
                <value>
                    <fullName>T-6</fullName>
                </value>
                <value>
                    <fullName>T-3</fullName>
                </value>
                <value>
                    <fullName>T-2</fullName>
                </value>
                <value>
                    <fullName>T-1</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Status__c</fullName>
        <label>Usage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Power User</fullName>
                </value>
                <value>
                    <fullName>Active User</fullName>
                </value>
                <value>
                    <fullName>Inactive User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <label>User Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Advertising Sales</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Client Operations</fullName>
                </value>
                <value>
                    <fullName>Client Operations- MANILA</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Data Operations</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Forecasting and Data Science</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Market Analytics</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>News - Data Operations</fullName>
                </value>
                <value>
                    <fullName>News - Production</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>UK Compliance</fullName>
                </value>
                <value>
                    <fullName>UK Operations</fullName>
                </value>
                <value>
                    <fullName>US Compliance</fullName>
                </value>
                <value>
                    <fullName>US Operations</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analyst User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Advisory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Advisory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Important contacts as it relates to user and engagement (Example: Power uses, senior level executives, Green Street champions)</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Access_New__c</fullName>
        <formula>Account.Website_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Access (New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Access_del__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Website Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_is_Current_RE_Research_Lacking__c</fullName>
        <inlineHelpText>Where do you feel your current real estate research is lacking? Check all that apply.</inlineHelpText>
        <label>Where is Current RE Research Lacking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-market comparison</fullName>
                </value>
                <value>
                    <fullName>Cross-sector comparison</fullName>
                </value>
                <value>
                    <fullName>Macro intelligence</fullName>
                </value>
                <value>
                    <fullName>Property data</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Public/Private market interplay</fullName>
                </value>
                <value>
                    <fullName>Property/Valuation assessment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZoomInfo_B2B_contact__c</fullName>
        <label>ZoomInfo B2B</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_B2C_contact__c</fullName>
        <label>ZoomInfo B2C</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Bank_with_M_Assets_Held_contac__c</fullName>
        <label>ZoomInfo Bank with $M Assets Held</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_City_contact__c</fullName>
        <label>ZoomInfo Company City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Country_Code_contact__c</fullName>
        <label>ZoomInfo Company Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Description_contact__c</fullName>
        <label>ZoomInfo Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_ID_contact__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_NAICS_Code_contact__c</fullName>
        <label>ZoomInfo Company NAICS Code</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Name_contact__c</fullName>
        <label>ZoomInfo Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Phone_contact__c</fullName>
        <label>ZoomInfo Company Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Revenue_contact__c</fullName>
        <label>ZoomInfo Company Revenue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_SIC_Code_contact__c</fullName>
        <label>ZoomInfo Company SIC Code</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_State_contact__c</fullName>
        <label>ZoomInfo Company State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Street_contact__c</fullName>
        <label>ZoomInfo Company Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Ticker_contact__c</fullName>
        <label>ZoomInfo Company Ticker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Zip_Code_contact__c</fullName>
        <label>ZoomInfo Company Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Credit_Union_contact__c</fullName>
        <label>ZoomInfo Credit Union</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Direct_Phone_contact__c</fullName>
        <label>ZoomInfo Direct Phone</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Eduction_contact__c</fullName>
        <label>ZoomInfo Eduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Email_Address_contact__c</fullName>
        <label>ZoomInfo Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Employee_Count_contact__c</fullName>
        <label>ZoomInfo Employee Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Employment_History_contact__c</fullName>
        <label>ZoomInfo Employment History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_FDIC_Insured_Bank_contact__c</fullName>
        <label>ZoomInfo FDIC Insured Bank</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_First_Name_contact__c</fullName>
        <label>ZoomInfo First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Fiscal_Year_Ends_contact__c</fullName>
        <label>ZoomInfo Fiscal Year Ends</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Founded_Date_contact__c</fullName>
        <label>ZoomInfo Founded Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Industry_contact__c</fullName>
        <label>ZoomInfo Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_International_contact__c</fullName>
        <label>ZoomInfo International</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Job_Function_contact__c</fullName>
        <label>ZoomInfo Job Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Job_Title_contact__c</fullName>
        <label>ZoomInfo Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Last_Name_contact__c</fullName>
        <label>ZoomInfo Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Last_Updated_Date_contact__c</fullName>
        <label>ZoomInfo Last Updated Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>